fix spacing between bottom sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ header h1 {
   display: flex;
   justify-content: space-around;
   padding: 20px 0;
-  margin: 20px;
+  margin: 20px 20px 40px;
 }
 
 .btn {
